--- a/css/mediaelementplayer.css
+++ b/css/mediaelementplayer.css
@@ -356,7 +356,7 @@ Reference: http://blog.rrwd.nl/2015/04/04/the-screen-reader-text-class-why-and-h
 
 .mejs__time-current,
 .mejs__time-handle-content {
-    background: #ffad33;
+    background: #d91420;
 }
 
 .mejs__time-hovered {
