--- a/css/styles.css
+++ b/css/styles.css
@@ -4,44 +4,26 @@
   box-sizing: border-box;
 }
 
-p {
+body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 18px;
 	line-height: 1.7em;
 }
 
-
-.vidcontainer {
-	width: 100%;
-	max-width: 415px;
-	height: 215px;
-	margin: auto;
+#container {
+		margin: 0 auto;
 }
-
-main {
-	margin-top: 15px;
-	padding: 15px;
-	max-width: 385px;
-	margin: auto;
+	
+.content {
+	  width: 90%;
+	  margin: 40px auto;
+	  padding: 1.4em;
 }
 
 
 @media (min-width: 786px) {
 
-	#container {
-		margin: 40px 0;
+.content {
+	max-width: 727px;
 	}
-
-	.vidcontainer {
-		width: 70%;
-		max-width: 725px;
-		height: 410px;
-	}
-
-	main {
-		width: 50%;
-		max-width: 725px;
-		margin: auto;
-	}
-
 }
