--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,16 @@ body {
 	  margin: 20px auto;
 }
 
-/**** Video player *****/
+span {
+	cursor: pointer;
+}
+
+span:hover {
+	text-decoration: underline;
+	color: red;
+}
+
+/********** VIDEO PLAYER ***********/
 
 /* Border video overlay */
 
@@ -40,7 +49,18 @@ body {
     background: #d91420;
 }
 
-/* Media queries */
+/** Interactive behavior **/
+
+
+/* Highlighting text when video is playing */
+
+.highlight {
+	color: #fff;
+	background: #d91420;
+}
+
+
+/********** MEDIA QUERIES **********/
 
 @media (min-width: 786px) {
 
